feat: GitTool (JGit), GrepTool line numbers fix, EditFileTool replaceAll, Gradle wrapper